Fix buttons's spacing

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body{
 }
 .control{
     margin: 64px;
-    padding: 100px 60px;
+    padding: 100px 0px;
     border: 2px solid aliceblue;
     display: flex;
     justify-content: space-between;
@@ -51,7 +51,7 @@ body{
 }
 .btn{
     padding: 48px 56px;
-    margin: 0px 24px 0px 0px ;
+    margin: 0px 12px;
     border-radius: 25px;
     border: 2px solid aliceblue;
     background: none;
@@ -66,6 +66,7 @@ body{
 }
 
 #color-picker{
+    margin: 0px 12px;
     padding:48px;
     border-radius: 150px;
     border: 2px solid aliceblue;
